syntax = "proto3";

package types;
option go_package = "../types";

//以太坊账户信息
// 	 privkey : 账户地址对应的私钥
//	 addr :账户地址
message Account4Relayer {
    bytes privkey    = 1;
    string addr      = 2;
}

message ValidatorAddr4EthRelayer {
    string ethereumValidator  = 1;
}

message Txhashes {
    repeated string txhash = 1;
}

message ReqChangePasswd {
    string oldPassphase = 1;
    string newPassphase = 2;
}

message ReqSetPasswd {
    string Passphase = 1;
}

message Account4Show {
    string privkey    = 1;
    string addr      = 2;
}

message assetType {
    string chain         = 1;
    string issueContract = 2;
    string symbol        = 3;
}

message EthBridgeClaim {
    int64 ethereumChainID = 1;
    string bridgeBrankAddr = 2;
    int64 nonce = 3;
    string tokenAddr = 4;
    string symbol        = 5;
    string ethereumSender = 6;
    string chainReceiver = 7;
    //因为考虑到eth是以wei单位的，需要更大的计数范围，所以使用string类型
    string amount = 9;
    int32 claimType = 10;
    string chainName = 11;
    int64 decimal = 12;
    string ethTxHash = 13;
    int32 forwardTimes = 14;
    int64 forwardIndex = 15;
}

message ImportKeyReq {
    string privateKey = 1;
}

message RelayerRunStatus {
    int32 status = 1;
    string details = 2;
}

message NewProphecyClaim {
    uint32 claimType = 1;
    string chainSender = 2;
    string tokenAddr = 3;
    string symbol = 4;
    string ethReceiver = 5;
    string  amount = 6;
    string txHash = 7;
}

message BalanceAddr  {
    string owner      = 1;
    string tokenAddr  = 2;
    string chainName  = 3;
}

message MintToken {
    string owner      = 1;
    string tokenAddr  = 2;
    string amount      = 3;
}

message ApproveAllowance {
    string ownerKey   = 1;
    string tokenAddr  = 2;
    string amount      = 3;
    string chainName   = 4;
}

message LockEthErc20 {
    string ownerKey        = 1;
    string tokenAddr       = 2;
    string amount           = 3;
    //将lock住的资产跨链转移到chain的该账户名下
    string chainReceiver = 4;
    string chainName       = 5;
}

message LockBTY {
    string ownerKey        = 1;
    string amount          = 2;
    //将lock住的资产跨链转移到ethereum的该账户名下
    string etherumReceiver = 3;
}

message ReplyAddr {
    bool isOK       =1;
    string addr     =2;
}

message ReplyBalance {
    bool isOK       =1;
    string balance  =2;
}

message Burn {
    string ownerKey   = 1;
    string tokenAddr  = 2;
    string amount      = 3;
    string chainReceiver = 4;
    string chainName       = 5;
}

message BurnFromChain {
    string ownerKey   = 1;
    string tokenAddr  = 2;
    string amount      = 3;
    string ethereumReceiver = 4;
}


message TransferToken {
    string tokenAddr = 1;
    string fromKey = 2;
    string toAddr = 3;
    string amount = 4;
    string chainName = 5;
}

message Uint64 {
    uint64 data = 1;
}

message EventLogIndex {
    uint64 height = 1;
    uint32 index = 2;
}

message ChainToEthereumStatics {
    string ethTxstatus = 1;
    string chainTxhash = 2;
    string EthereumTxhash = 3;
    int32  burnLockWithdraw = 4;
    //该笔lock或者burn交易的chain发起人
    string chainSender = 5;
    string ethereumReceiver = 6;
    string symbol = 7;
    //因为考虑到,eth的单位是以wei计算的，所以使用string类型
    string amount = 8;
    int64 nonce   = 9;
    int64 txIndex = 10;
    string operationType = 11;
}

message Ethereum2ChainStatics {
    string chainTxstatus = 1;
    string chainTxhash = 2;
    string EthereumTxhash = 3;
    int32  burnLock = 4;
    //该笔lock或者burn交易的chain发起人
    string ethereumSender = 5;
    string chainReceiver = 6;
    string symbol = 7;
    //因为考虑到,eth的单位是以wei计算的，所以使用string类型
    string amount = 8;
    int64 nonce   = 9;
    int64 txIndex = 10;
    string operationType = 11;
}

message TokenAddress {
    string address = 1;
    string symbol  = 2;
    string chainName = 3;
    int32 decimal    = 4;
}

message TokenAddressArray {
    repeated TokenAddress tokenAddress = 1;
}

message TokenStaticsRequest {
    string symbol = 1;
    int32 from = 2;
    int32 operation = 3;
    int32 status = 4;
    int64 txIndex = 5;
    int32 count   = 6;
}

message TokenStaticsResponse {
    repeated Ethereum2ChainStatics e2Cstatics = 1;
    repeated ChainToEthereumStatics c2Estatics = 2;
}

message SetupMulSign {
    string operatorPrivateKey = 1;
    repeated string owners = 2;
}

message SafeTransfer {
    string to = 1;
    string token = 2;
    double amount = 3;
    string operatorPrivateKey = 4;
    repeated string ownerPrivateKeys = 5;
    string chainName                 = 6;
}

message ERC20Token {
    string owner  = 1;
    string name   = 2;
    string symbol = 3;
    string amount = 4;
    int32 decimals = 5;
    string chain2deploy = 6;
}

message ETHTokenLockAddress {
    string address = 1;
    string symbol  = 2;
}

message ETHConfigLockedTokenOffline {
    string address   = 1;
    string symbol    = 2;
    string threshold = 3;
    uint32 percents  = 4;
    string chainName = 5;
}

message BalanceLockedReq  {
    string bridgeBank = 1;
    string tokenAddr  = 2;
    string chainName  = 3;
}

message ResendChainEventReq  {
    int64 height = 1;
}

message ResendEthereumEventReq  {
    int64 height      = 1;
    int32 txIndex     = 2;
    string chainName  = 3;
}

message RegetEthereumEventReq  {
    int64 start      = 1;
    int64 stop      = 2;
    string chainName  = 3;
}

message CfgWithdrawReq  {
    string symbol       = 1;
    string feeAmount    = 2;
    string amountPerDay = 3;
    string chainName    = 4;
}

message withdrawPara  {
    string fee = 1;
    string amountPerDay = 2;
}

message WithdrawSymbol2Para  {
    map<string, withdrawPara> symbol2Para = 1;
}

message WithdrawTx  {
    string chainSender         = 1;
    string ethereumReceiver      = 2;
    string symbol                = 4;
    string amount                 = 5;
    int64 nonce                  = 6;
    string txHashOnChain       = 7;
    string txHashOnEthereum      = 8;
    int32 year                   = 9;
    int32 month                  = 10;
    int32 day                    = 11;
    int32 status                 = 12;
    string statusDescription      = 13;
    string errorDescription      = 14;
}

message WithdrawFromChain {
    string ownerKey   = 1;
    string tokenAddr  = 2;
    string amount      = 3;
    string ethereumReceiver = 4;
}

message TxReceiptReq  {
    string txHash     = 1;
    string chainName  = 2;
}

message CfgOfflineSaveAccountReq  {
    string address     = 1;
    string chainName   = 2;
}

message CfgPlatformTokenSymbolReq  {
    string symbol      = 1;
    string chainName   = 2;
}

message CfgMultiSignAddr  {
    string multiSignAddr   = 1;
    string chainName       = 2;
}

message Symbol2EthChain  {
    map<string, string> symbol2name = 1;
}

message CreateLockEventReq  {
    string from      = 1;
    string to        = 2;
    string token     = 3;
    string symbol    = 4;
    string value     = 5;
    string nonce     = 6;
    string chainName = 7;
}

message TxRelayConfirm4Chain  {
    int32 eventType      = 1;
    bytes data           = 2;
    int32 fdTimes        = 3;
    int64 fdIndex          = 4;
    string toChainName     = 5;
    bytes txHash         = 6;
    bool resend          = 7;
}

message TxRelayConfirm4Ethereum  {
    int32 eventType      = 1;
    bytes data           = 2;
    int32 fdTimes        = 3;
    int64 fdIndex        = 4;
    string txHash        = 5;
    bool resend          = 6;
}

message TxRelayAck  {
    string txHash         = 1;
    int64 fdIndex         = 2;
}

message relayTxDetail {
    int32 claimType        = 1;
    int64 txIndexRelayed   = 2; //已经发送的中继交易的index
    //中继交易，不是源交易
    string txhash          = 3;
}

message QueryReq  {
    string param        = 1;
    string abiData      = 2;
    string contractAddr = 3;
    string owner        = 4;
    string chainName    = 5;
}

message ProphecyProcessed {
    string claimID  = 1;
    bool valid      = 2;
    string txhash   = 3;
}

